--- a/HippoAndroid/app/build.gradle
+++ b/HippoAndroid/app/build.gradle
@@ -27,8 +27,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.opentok.android:opentok-android-sdk:2.8.+'
-    compile 'com.google.android.gms:play-services-auth:9.8.0'
+    compile 'com.google.android.gms:play-services-auth:9.4.0'
     compile 'com.android.support:design:22.2.1'
+    compile 'com.loopj.android:android-async-http:1.4.9'
     testCompile 'junit:junit:4.12'
 }
 
